# basic-python-template

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  increase_version.py  main.py  pyproject.toml
{{cookiecutter.project_slug}}/docker/: Dockerfile
